projects/cts/logic-service/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: logic
  name: logic-svc
  namespace: cts-dev
spec:
  ports:
    - port: 8011
      protocol: TCP
      targetPort: 8011
  selector:
    app: logic
