projects/cts/logic-service/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logic
  namespace: cts-dev
  labels:
    app: logic
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  tls:
    - hosts:
      -  cts-dev-logic.coherent.in
      secretName: logic-tls
  rules:
  - host: "cts-dev-logic.coherent.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: logic-svc
            port: 
              number: 8011
